<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.7</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.apmosys</groupId>
	<artifactId>employeeportal</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>war</packaging>
	<name>employeeportal</name>
	<description>Demo project for Spring Boot</description>
	<properties>
		<java.version>11</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.session</groupId>
			<artifactId>spring-session-core</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-io</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.24</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.modelmapper</groupId>
			<artifactId>modelmapper</artifactId>
			<version>2.4.4</version>
		</dependency>
		<dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
	    <dependency>
		    <groupId>org.dhatim</groupId>
		    <artifactId>fastexcel</artifactId>
		    <version>0.12.13</version>
	    </dependency>
	    <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>4.9.1</version>
        </dependency>
        <dependency>
           <groupId>org.json</groupId>
           <artifactId>json</artifactId>
           <version>20220924</version>
        </dependency>
        <dependency>
           <groupId>org.dhatim</groupId>
           <artifactId>fastexcel-reader</artifactId>
           <version>0.12.13</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-envers</artifactId>
        </dependency>
        <dependency>
            <groupId>de.danielbechler</groupId>
            <artifactId>java-object-diff</artifactId>
            <version>0.95</version>
        </dependency>
        <dependency>
		    <groupId>com.microsoft.sqlserver</groupId>
		    <artifactId>mssql-jdbc</artifactId>
		    <version>9.4.0.jre11</version>
		</dependency>
        <dependency>
        <groupId>org.apache.poi</groupId>
        <artifactId>poi</artifactId>
        <version>3.17</version>
    </dependency>
    
    <dependency>
        <groupId>org.apache.poi</groupId>
        <artifactId>poi-ooxml</artifactId>
        <version>3.17</version>
    </dependency>
    <dependency>
		<groupId>org.apache.skywalking</groupId>
		<artifactId>apm-toolkit-logback-1.x</artifactId>
		<version>9.0.0</version>
	</dependency>

	</dependencies>

	<build>
		<finalName>employeeportal</finalName>

		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>com.github.eirslett</groupId>

				<artifactId>frontend-maven-plugin</artifactId>

				<version>1.11.3</version>
				<configuration>

					<workingDirectory>src/main/frontend</workingDirectory>

					<installDirectory>target</installDirectory>

				</configuration>

				<executions>

					<execution>

						<id>install node and npm</id>

						<goals>

							<goal>install-node-and-npm</goal>

						</goals>

						<configuration>

							<nodeVersion>v14.17.5</nodeVersion>

							<npmVersion>6.14.14</npmVersion>

						</configuration>

					</execution>

					<execution>

						<id>npm install</id>

						<goals>

							<goal>npm</goal>

						</goals>

						<configuration>

							<arguments>install</arguments>

						</configuration>

					</execution>

					<execution>

						<id>npm run build</id>

						<goals>

							<goal>npm</goal>

						</goals>

						<configuration>

							<arguments>run build</arguments>

						</configuration>

					</execution>

				</executions>
			</plugin>

			<plugin>

				<artifactId>maven-antrun-plugin</artifactId>

				<executions>

					<execution>

						<phase>generate-resources</phase>

						<configuration>

							<target>

								<copy todir="src/main/resources/static">

									<fileset
										dir="src/main/frontend/dist/employee-portal-revamp" />

								</copy>

							</target>

						</configuration>

						<goals>

							<goal>run</goal>

						</goals>

					</execution>

				</executions>

			</plugin>
		</plugins>

	</build>

</project>
